# pytorch-pfn-extras

./: .coveragerc  .gitignore  .mypy.ini  .readthedocs.yaml  LICENSE  Makefile  README.md  example_pysen.toml  pyproject.toml  pytest.ini  requirements_gh.txt  setup.cfg  setup.py
.flexci/: _error_handler.ps1  config.pbtxt  run.bat  run.sh  test.bat  test.ps1  test.sh
.flexci/linux/: Dockerfile  build_and_push.sh  download_mnist.sh  main-flexci.sh  script.sh  unittest.sh
.flexci/windows/: README.md  _error_handler.ps1  _flexci.ps1  download_mnist.ps1  run.bat  test.ps1
.github/: CODEOWNERS
.github/workflows/: nightly-test-cpu.yml  pretest-and-test.yml  pretest.yml  publish.yml  test-cpu.yml
docs/: config.md  cuda.md  extensions.md  lazy.md  logic.md  onnx.md  requirements.txt  runtimes.md  snapshot.md  tou.md
docs/source/: conf.py  index.rst
example/: cifar10.py  cifar10_ddp_trainer.py  dummy.py  ignite-mnist.py  mnist.py  mnist_custom_logic.py  mnist_ddp.py  mnist_trainer.py  multiprocessing.py  ppe_multiproc.py  pysen.toml  trainer-mnist.py
pytorch_extensions/: __init__.py  _updater.py  convert.py  extension.py  file_utils.py  manager.py  reporter.py  trainer.py  trigger.py  trigger_util.py  updater.py
pytorch_extensions/extensions/: __init__.py  _snapshot.py  (+10 more)
pytorch_pfn_extras/: __init__.py  _cupy.py  _scalar.py  _tensor.py  _torch_version.py  _version.py  backend.py  config.py  config_types.py  engine.py  handler.py  logging.py  reporting.py  testing.py  torch_version.py  torchscript.py  writing.py
tests/: conftest.py  requirements.txt
(+333 files in other folders)
